infra/k8s/base/service-opa.yaml
apiVersion: v1
kind: Service
metadata:
  name: opa
  namespace: ztr-aa
spec:
  selector:
    app: opa
  ports:
    - name: http
      port: 8181
      targetPort: 8181
